// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectedTabID props can be passed as an empty string into tab component 1`] = `
<li
  className="rdlt-default-tab defaultTab"
  id="tab_1"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  a1
</li>
`;

exports[`tab component with user defined css class "defualtTab" and "activeTab" 1`] = `
Array [
  <li
    className="rdlt-default-tab defaultTab rdlt-active-tab activeTab"
    id="tab_1"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    a1
  </li>,
  <li
    className="rdlt-default-tab defaultTab"
    id="tab_2"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  >
    a3
  </li>,
]
`;
